dev/traefik/ingress-route-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard

spec:
  entryPoints:
    - web

  routes:
    - kind: Rule
      match: Host(`traefik.example.com`)
      middlewares:
        - name: auth-group-admin
          namespace: auth
      services:
        - kind: TraefikService
          name: dashboard@internal

    - kind: Rule
      match: Host(`traefik.example.com`) && PathPrefix(`/api`)
      middlewares:
        - name: auth-group-admin
          namespace: auth
      services:
        - kind: TraefikService
          name: api@internal
