dev/traefik/whoami.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami

spec:
  replicas: 1
  revisionHistoryLimit: 0

  selector:
    matchLabels:
      app: whoami

  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:v1.12.0
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  type: ClusterIP
  selector:
    app: whoami
  ports:
    - name: http
      port: 80
      targetPort: http

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami

spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`whoami.example.com`)
      middlewares:
        - name: auth-group-admin
          namespace: auth
      services:
        - kind: Service
          name: whoami
          port: http
          scheme: http
